# Songbird-Py

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  before_linux.sh  install_cmake.sh  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_hikari.txt  requirements_pincer.txt  setup.py
.github/workflows/: docs.yml  publish.yml
docs/: conf.py  config.rst  driver.rst  exceptions.rst  hikari.rst  index.rst  modules.rst  pincer.rst  queue.rst  requirements.txt  songbird.rst
docs/extensions/: autotypehint.py  docstrings.py
examples/: README.md  hikari.py  hikari_lightbulb.py  pincer.py  seeking.py  wip.py
songbird/: __init__.py  __init__.pyi  config.py  exceptions.py  exceptions.pyi  helpers.py  hikari.py  pincer.py  playlist.py  playlist_queue.py  queue.py  songbird.pyi  voicebox_base.py
songbird/integration/: __init__.py  hikari.py  pincer.py  voicebox_base.py
src/: config.rs  driver.rs  event.rs  exceptions.rs  input.rs  lib.rs  playable.rs  seekable.rs  source.rs  track.rs  track_handle.rs  utils.rs
