[package]
name = "songbird-py"
version = "0.1.0"
edition = "2018"

[lib]
name = "songbird"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1.52"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["driver", "yt-dlp"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
version = "0.15"
features = ["attributes", "tokio-runtime"]
