[package]
name = "songbird-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "songbird"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.20.0", features = ["sync"] }
async-trait = "0.1.53"
pyo3-log = "0.6.0"
log = "0.4.17"

[dependencies.songbird]
version = "0.3.0"
features = ["driver", "yt-dlp"]

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
version = "0.16.0"
features = ["attributes", "tokio-runtime"]

[dependencies.discortp]
features = ["discord-full"]
version = "0.4.0"
