[build-system]
requires = ["setuptools>=57.0", "wheel>=0.36", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "t"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

