[build-system]
build-backend = "maturin"
requires = ["maturin>=0.12,<0.13"]

[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
]
dependencies = ["yt-dlp>=2021.12.1"]
description = "A Discord voice library using Python Songbird bindings."
name = "songbird-py"
requires-python = ">=3.8"
version = "0.1.8"

[project.optional-dependencies]
hikari = ["hikari"]
pincer = ["pincer"]

[project.urls]
"Bug Tracker" = "https://github.com/Lunarmagpie/Songbird-Py/issues"
Docs = "https://songbird-py.readthedocs.io/en/latest/"
GitHub = "https://github.com/magpie-dev/Songbird-Py"

[tool.maturin]
sdist-include = ["songbird/*.pyi"]

[tool.cibuildwheel]
build-verbosity = "1"

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
before-build = """
curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y &&
yum install -y opus
"""

[tool.cibuildwheel.macos]
archs = ["auto", "arm64"]

[tool.cibuildwheel.windows]
archs = ["auto", "arm64"]
